modifing the docker files

--- a/catalog/Dockerfile
+++ b/catalog/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest
 
 # set a directory for the app
-WORKDIR /
+WORKDIR /app
 
 # copy all the files from the host folder to the container
 COPY . .
@@ -15,6 +15,11 @@ RUN apt-get install python3 -y
 
 # install pip3
 RUN apt-get install python3-pip -y
+
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+
+EXPOSE 5000
 
 # Run client.py when the container launches
 CMD ["python3", "./catalog.py"]
